--- a/bin/install
+++ b/bin/install
@@ -22,20 +22,19 @@ install () {
   local -r version="$2"
   local -r install_path="$3"
 
-  local -r bin_install_path="${install_path}/bin"
   local -r download_url="$(get_download_url "${version}")"
   local -r download_path="${TMP_DOWNLOAD_DIR}/$(basename "${download_url}")"
 
   echo "Downloading ${toolname} version ${version} from ${download_url}"
   if curl -fsL "${download_url}" -o "${download_path}"; then
-    echo "Cleaning ${toolname} previous binaries"
-    rm -rf "${bin_install_path}/${toolname}"
+    echo "Cleaning previous ${toolname}"
+    rm -rf "${install_path}"
 
-    echo "Creating ${toolname} bin directory"
-    mkdir -p "${bin_install_path}"
+    echo "Creating ${toolname} directory"
+    mkdir -p "${install_path}"
 
     echo "Extracting ${toolname} archive"
-    tar -xv --strip-components=2 -C "$bin_install_path" -f "${download_path}" "$(basename -s .tgz "$download_path")/bin/$toolname"
+    tar -xv --strip-components=1 -C "$install_path" -f "${download_path}"
   else
     echo "Error: ${toolname} version ${version} not found" >&2
     exit 1
