--- a/bin/install
+++ b/bin/install
@@ -49,7 +49,7 @@ get_arch () {
 get_download_url () {
   local -r version="$1"
   local -r arch="$(get_arch)"
-  echo "https://github.com/$repository/releases/download/$version/${toolname}-${arch}-amd64-${version/v}.tgz"
+  echo "https://github.com/$repository/releases/download/v$version/${toolname}-${arch}-amd64-${version}.tgz"
 }
 
 install "${ASDF_INSTALL_TYPE}" "${ASDF_INSTALL_VERSION}" "${ASDF_INSTALL_PATH}"
